Small alignment fix with buttons on user page

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -260,6 +260,7 @@ header .hamburger:hover > i {
 
 header .buttons {
     display: flex;
+    justify-content: flex-end;
     min-width: 250px;
 }
 
